fixed cutoff tooltips on avatars

--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -292,13 +292,35 @@
 		list-style: none !important;
 		padding-left: 0;
 	}
+
+	a {
+		@apply no-underline text-foreground transition-colors;
+	}
+	a:hover {
+		@apply underline;
+	}
+
+	p code,
+	span code,
+	h1 code,
+	h2 code,
+	h3 code,
+	h4 code,
+	h5 code,
+	h6 code {
+		border: 1px solid #6d6d6d;
+		background: #1d2023;
+		border-radius: 0.25rem;
+		padding: 0.15em 0.4em;
+		font-size: 14px;
+	}
 }
 
 @layer components {
 	*:not(body):not(.focus-override) {
 		outline: none !important;
 		&:focus-visible {
-			@apply focus-visible:ring-foreground focus-visible:ring-offset-background focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1;
+			@apply focus-visible:ring-foreground focus-visible:ring-offset-background focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-1 rounded-xs;
 		}
 	}
 
